--- a/main.css
+++ b/main.css
@@ -3,8 +3,10 @@
 }
 
 #main_logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+    max-width:100%;
+    max-height:100%;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%,-50%);
 }
