--- a/main.css
+++ b/main.css
@@ -10,3 +10,17 @@
     left:50%;
     transform:translate(-50%,-50%);
 }
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+  }
+  .center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    border: 3px solid green;
+  }
